feat: integrate question bank functionality into interview process with caching and new fields