@@ -1,10 +1,15 @@
 package com.benchreadiness.interview.config;
 
+import com.github.benmanes.caffeine.cache.Caffeine;
 import org.springframework.cache.CacheManager;
 import org.springframework.cache.annotation.EnableCaching;
-import org.springframework.cache.concurrent.ConcurrentMapCacheManager;
+import org.springframework.cache.caffeine.CaffeineCache;
+import org.springframework.cache.support.SimpleCacheManager;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+
+import java.util.List;
+import java.util.concurrent.TimeUnit;
 
 @Configuration
 @EnableCaching
@@ -12,12 +17,21 @@ public class CacheConfig {
 
     @Bean
     public CacheManager cacheManager() {
-        ConcurrentMapCacheManager cacheManager = new ConcurrentMapCacheManager();
-        cacheManager.setCacheNames(java.util.Arrays.asList(
-            "candidateMatches", 
-            "clientMatches", 
-            "clientOverviews"
+        SimpleCacheManager manager = new SimpleCacheManager();
+        manager.setCaches(List.of(
+            buildCache("candidateMatches", 300, 1000),      // 5 min TTL
+            buildCache("clientMatches", 21600, 1000),       // 6 hours TTL
+            buildCache("clientOverviews", 300, 100)         // 5 min TTL
         ));
-        return cacheManager;
+        return manager;
+    }
+
+    private CaffeineCache buildCache(String name, long ttlSeconds, int maxSize) {
+        return new CaffeineCache(name,
+            Caffeine.newBuilder()
+                .expireAfterWrite(ttlSeconds, TimeUnit.SECONDS)
+                .maximumSize(maxSize)
+                .recordStats()
+                .build());
     }
 }
